routing ができない

--- a/templates/product_edit.jade
+++ b/templates/product_edit.jade
@@ -1,2 +1,2 @@
 template(name='product_edit')
-  {{> quickForm collection="Products" id="insertBookForm" type="insert"}}
+  +quickForm collection="Products" type="insert" id="productEdit"
