--- a/templates/nav.jade
+++ b/templates/nav.jade
@@ -2,7 +2,7 @@ template(name='layout')
   nav.navbar.navbar-default.navbar-static-top
     .container
       .navbar-header
-        a.navbar-brand(href='#')
+        a.navbar-brand(href='/')
           |つくってみた
       .navbar-right
         p.navbar-btn
