--- a/templates/product_list.jade
+++ b/templates/product_list.jade
@@ -1,7 +1,7 @@
 template(name='product_list')
   .row
     each products
-      .col-md-3.col-md-offset-1
+      .col-md-4
         a(href="/product/#{_id}")
           .list-group
             .list-group-item
